src/test/ui/parser/issue-63135.rs
// error-pattern: aborting due to 6 previous errors

fn i(n{...,f #
